Fixing scrollbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -29,19 +29,26 @@
 
 .main-nav {
   background-color: $color-header;
+  margin-bottom: 20px;
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-.sidebar-content::-webkit-scrollbar {
-  display: none;
-}
-
-/* Hide scrollbar for IE, Edge and Firefox */
 .sidebar-content {
-  max-height: calc(100vh - 64px);
-  overflow-y: scroll;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
+  max-height: 83vh;
+  overflow: hidden scroll;
+
+  &::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background: #f1f1f1;
+    border-radius: 5px;
+  }
 }
 
 .title-vancancy {
